--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@
 .moHide{display: none;}
 
 /*sec1*/
-#sec1{padding-left:10%;text-align: center;background-color:#fff; color:#202121; }
-#sec1 .stit{text-align: center; font-size:96px; font-weight:600;}
+#sec1{padding-left:10%;text-align: center;background-color:#fff; color:#202121; height:100%;}
+#sec1 .stit{text-align: center; font-size:96px; font-weight:600; white-space: nowrap; position:relative;}
 .pos{position:absolute; bottom:0; left:10%; width:90%;}
 .pos > div{width:15%; display: inline-block; }
 .skill_1{height:240px; background:linear-gradient(to top,#fff, rgba(200,200,200,0.4)) 100%;}
@@ -16,19 +16,19 @@
 .skill_6{height:120px; border-top:8px dotted #efefef;}
 #sec1 .skill{position: absolute; bottom:0; left:10%; width:90%;font-size:0; border-top:1px solid #efefef; padding-top:20px; background:#fff; height:96px;}
 #sec1 .skill li{display: inline-block; width:15%; font-size:16px;}
-
-#sec1 .change_word{width:100%; text-align: center; position:relative;}
-#sec1 .change_word li{display:block; width:50%; font-size:100px; opacity: 0; position: absolute; left:22%; top:43%; transition:all 0.1s; font-weight: 600;}
-#sec1 .change_word li:nth-child(1){color:#DC8665}
-#sec1 .change_word li:nth-child(2){color:#138085}
-#sec1 .change_word li:nth-child(3){color:#544667}
-#sec1 .change_word li:nth-child(4){color:#CE7672}
-#sec1 .change_word li:nth-child(5){color:#EEB462}
-#sec1 .change_word li.on{opacity: 1;}
+#sec1 .word_pos{position:absolute; top:45%; left:50%; transform: translateX(-50%)}
+#sec1 .change_word{position:relative; width:400px; height:96px; display: inline-block}
+#sec1 .change_word:after{content: ''; width:100%; height:2px; background:#efefef;}
+#sec1 .change_word div{display:inline-block;font-size:100px; width:400px; text-align: center; opacity: 0; position: absolute; left:0; transition:all 0.1s; font-weight: 600;}
+#sec1 .change_word div:nth-child(1){color:#DC8665}
+#sec1 .change_word div:nth-child(2){color:#138085}
+#sec1 .change_word div:nth-child(3){color:#544667}
+#sec1 .change_word div:nth-child(4){color:#CE7672}
+#sec1 .change_word div:nth-child(5){color:#EEB462}
+#sec1 .change_word div.on{opacity: 1;}
 
 /*sec2*/
-#sec2 .project_list{max-width: 1280px;
-    width: 80%; margin:80px auto;}
+#sec2 .project_list{max-width: 1280px; width: 80%; margin:80px auto;}
 #sec2 .project_list .context{width:100%; height:36%; background:#fff; position:absolute; z-index: 999; bottom:0; padding:24px; box-sizing: border-box; color:#202121;}
 #sec2 .project_list .context p{font-size:24px; font-weight:700; margin-bottom:8px;}
 #sec2 .project_list li{width:48%; max-width:400px; height:360px; border-radius:12px; overflow: hidden; position:relative; float:left; margin:12px 8px; cursor:pointer; border:1px solid #efefef;}
@@ -38,13 +38,13 @@
 #sec2 .project_list li:nth-child(3){background:url(../images/pro_some3.jpg) no-repeat; background-size:100%;}
 #sec2 .project_list li:nth-child(4){background:url(../images/pro_some1.jpg) no-repeat; background-size:100%;}
 #sec2 .project_list li:nth-child(5){background:url(../images/pro_some2.jpg) no-repeat; background-size:100%;}
-#sec2{height:100%;width:100%; background: #efefef;}
+#sec2{width:100%; background: #efefef;}
 
 
 /*sec3*/
-#sec3{height:100%;width:100%; color:#202121; }
+#sec3{width:100%; color:#202121; }
 .profile_img{width:180px; height:180px; border-radius: 50%; border:2px solid #202121; margin-bottom:24px;}
-.profile{width:80%; margin:0 auto;}
+.profile{width:48%; margin:80px auto; display: inline-block}
 .profile:after{display: block; content: ''; width:50%; height:2px; background:#202121; margin-top:24px;}
 .profile .tit{font-size:32px; font-weight:700; padding:16px 0;}
 .profile_list{line-height:1.5;} 
@@ -79,24 +79,24 @@
 
 
 /*con1*/
-#content .con1 .desc_list > li .core{height:10px; background-color:#c2252b;}
-#content .con1 .desc_list > li .point{ height:10px; background-color:#637d36;}
-#content .con1 .desc_list > li .sub{ height:10px; background-color:#f8e5c3;}
+#content .con1 .desc_list > li .core{height:12px; background-color:#c2252b; border-top-left-radius: 50px; border-bottom-left-radius: 50px;}
+#content .con1 .desc_list > li .point{ height:12px; background-color:#637d36;}
+#content .con1 .desc_list > li .sub{ height:12px; background-color:#f8e5c3; border-top-right-radius: 50px; border-bottom-right-radius: 50px;}
 
 /*con2*/
-#content .con2 .desc_list > li .core{height:10px; background-color:#D2876E;}
-#content .con2 .desc_list > li .point{ height:10px; background-color:#E16810;}
-#content .con2 .desc_list > li .sub{ height:10px; background-color:#757575;}
+#content .con2 .desc_list > li .core{height:12px; background-color:#D2876E; border-top-left-radius: 50px; border-bottom-left-radius: 50px;}
+#content .con2 .desc_list > li .point{ height:12px; background-color:#E16810;}
+#content .con2 .desc_list > li .sub{ height:12px; background-color:#757575; border-top-right-radius: 50px; border-bottom-right-radius: 50px;}
 
 /*con3*/
-#content .con3 .desc_list > li .core{height:10px; background-color:#313579;}
-#content .con3 .desc_list > li .point{ height:10px; background-color:#CC112C;}
-#content .con3 .desc_list > li .sub{ height:10px; background-color:#6AC3E7;}
+#content .con3 .desc_list > li .core{height:12px; background-color:#313579; border-top-left-radius: 50px; border-bottom-left-radius: 50px;}
+#content .con3 .desc_list > li .point{ height:12px; background-color:#CC112C;}
+#content .con3 .desc_list > li .sub{ height:12px; background-color:#6AC3E7; border-top-right-radius: 50px; border-bottom-right-radius: 50px;}
 
 /*con4*/
-#content .con4 .desc_list > li .core{height:10px; background-color:#3a3d88;}
-#content .con4 .desc_list > li .point{ height:10px; background-color:#ff6161;}
-#content .con4 .desc_list > li .sub{ height:10px; background-color:#ffdb30;}
+#content .con4 .desc_list > li .core{height:12px; background-color:#3a3d88; border-top-left-radius: 50px; border-bottom-left-radius: 50px;}
+#content .con4 .desc_list > li .point{ height:12px; background-color:#ff6161;}
+#content .con4 .desc_list > li .sub{ height:12px; background-color:#ffdb30; border-top-right-radius: 50px; border-bottom-right-radius: 50px;}
 
 
 
@@ -113,10 +113,12 @@
     .section{padding-left:0; width:100%}
     .skill{display:none;}
     #sec1{padding-left:0; background:#fff;}
-    #sec1 .change_word li{top:80px;}
-    #sec2{background:#efefef;}
-    #sec2 .project_list li {max-width:100%; width:100%; margin:2% 0;}
+    #sec1 .word_pos{top:20%; z-index: 999;}
+    #sec2{background:#efefef; padding: 120px 0;}
+    #sec2 .project_list{margin:0 auto;}
+    #sec2 .project_list li {max-width:100%; width:100%; margin:16px 0; height:320px;}
     #sec3{text-align: center; }
+    #sec3 .profile{width:100%;}
     #sec3 .profile:after{width:100%;}
     #content{margin:0; width:100%;}
     #content .con{padding:80px 0 0 0; border:none; height:auto; width:90%; margin:0 auto;}
